# command_center

arduino/: compile.sh  upload.sh
arduino/arduino/: temp.ino
rust/: Cargo.toml  config.json
rust/src/: items.rs  main.rs
