[package]
name = "command_center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3.0"
run_script = "0.10.1"
serde = {verison = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
serialport = "4.2.0"
